# llm-router-lab

./: .env.example  .gitignore  README.md  litellm_config.yaml  opencode_direct.json  opencode_openrouter.json  pyproject.toml
config/: models.yaml  opencode.json  routers.yaml  scenarios.yaml
content/: orchestration-moat-revised.md  orchestration-moat-x-article-with-md-table.md  orchestration-moat-x-article.md  tables.html
notebooks/: compare_results.ipynb
scenarios/: basic_completion.yaml  coding_agent.yaml  error_handling.yaml  long_context.yaml  multi_turn.yaml  opencode_streaming.yaml  openrouter_multi_provider.yaml  router_overhead.yaml  streaming.yaml  tool_calling.yaml
scripts/: bench_opencode.sh  compare.py  run_benchmark.py
src/llm_router_lab/: __init__.py  config.py  metrics.py  report.py  runner.py  types.py
src/llm_router_lab/providers/: __init__.py  base.py  cloudflare_ai_gw.py  litellm.py  openai_compat.py  openrouter.py  portkey.py
src/llm_router_lab/scenarios/: __init__.py  builtin.py  loader.py
tests/: test_metrics.py  test_providers.py  test_runner.py
